--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
     "@astrojs/starlight": "^0.33.0",
     "@supabase/supabase-js": "^2.49.4",
     "astro": "^5.5.3",
