Commit message errore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,22 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "@lib/*": ["src/lib/*"],
+      "@types": ["src/database.types.ts"]
+    },
+    "types": ["astro/client"],
+    "target": "ES2020",
+    "module": "NodeNext",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*","src/**/*", "src/database.types.ts"],
-  "exclude": ["dist"]
+  // "extends": "astro/tsconfigs/strictest",
+  "include": ["src/**/*", "src/database.types.ts", "env.d.ts", "**/*","src/**/*"],
+  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.test.js", "**/*.spec.ts", "**/*.spec.js"]
 }
+  // "include": [".astro/types.d.ts", "**/*","src/**/*"],
+
