--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,15 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@lib/*": ["src/lib/*"],
-      "@types": ["src/database.types.ts"]
+      "@lib/*": ["./src/lib/*"]
     },
     "types": ["astro/client"],
-    "target": "ES2020",
+    /* "target": "ES2020",
     "module": "NodeNext",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true */
   },
   // "extends": "astro/tsconfigs/strictest",
   "include": ["src/**/*", "src/database.types.ts", "env.d.ts", "**/*","src/**/*"],
