--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,4 @@
 {
-  "recommendations": [
-    "denoland.vscode-deno"
-  ],
+  "recommendations": ["astro-build.astro-vscode"],
   "unwantedRecommendations": []
 }
