--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,5 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
-      "@lib/*": ["./src/lib/*"]
-    },
-    "types": ["astro/client"],
-    /* "target": "ES2020",
-    "module": "NodeNext",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true */
-  },
-  // "extends": "astro/tsconfigs/strictest",
-  "include": ["src/**/*", "src/database.types.ts", "env.d.ts", "**/*","src/**/*"],
-  "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.test.js", "**/*.spec.ts", "**/*.spec.js"]
+  "extends": "astro/tsconfigs/strict",
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
-  // "include": [".astro/types.d.ts", "**/*","src/**/*"],
-
