--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.34.0",
+    "@supabase/supabase-js": "^2.49.4",
     "astro": "^5.6.1",
     "sharp": "^0.32.5"
   }
